# gs_usb_x

./: README.md
firmware/: n32_gs_usb_v1.0.hex
kernel/5.15/: Makefile  gs_usb.c
kernel/6.14/: gs_usb.c
kernel/6.8/: Makefile  gs_usb.c
kernel/scripts/: N32_1M_5M.sh  N32_500K_2M.sh
sdk/gsusb-cpp/: CMakeLists.txt  README.md
sdk/gsusb-cpp/examples/: 01_pair_4ch_threading.cpp  01_simple_std.cpp  02_pair_8ch_threading.cpp  02_periodic.cpp  03_simple_fd.cpp  04_custom_timing.cpp  04_multi_std_asyncio.cpp  05_pair_4ch_threading.cpp  06_pair_8ch_threading.cpp  07_pair_4ch_asyncio.cpp  08_pair_8ch_asyncio.cpp  09_multi_custom_timing_threading.cpp  10_multi_custom_timing_asyncio.cpp  11_long_run_stress.cpp  demo_common.cpp  demo_common.hpp
sdk/gsusb-cpp/include/gsusb/: gsusb.hpp
sdk/gsusb-cpp/scripts/: run_examples.ps1
sdk/gsusb-cpp/src/: gsusb.cpp  libusb_dyn.cpp  libusb_dyn.hpp
sdk/gsusb-csharp/: README.md  gsusb-csharp.sln
sdk/gsusb-csharp/examples/GsUsb.Examples/: DemoCommon.cs  GsUsb.Examples.csproj  Program.cs
sdk/gsusb-csharp/examples/GsUsb.Examples/Examples/: 01_pair_4ch_threading.cs  01_simple_std.cs  02_pair_8ch_threading.cs  02_periodic.cs  03_simple_fd.cs  04_custom_timing.cs  04_multi_std_asyncio.cs  05_pair_4ch_threading.cs  06_pair_8ch_threading.cs  07_pair_4ch_asyncio.cs  08_pair_8ch_asyncio.cs  09_multi_custom_timing_threading.cs  10_multi_custom_timing_asyncio.cs  11_long_run_stress.cs
sdk/gsusb-csharp/scripts/: run_examples.ps1
sdk/gsusb-csharp/src/GsUsb/: GsUsb.csproj  GsUsbBus.cs  GsUsbUtilities.cs  LibUsbNative.cs  Models.cs
sdk/gsusb-rs/: Cargo.toml  README.md
sdk/gsusb-rs/examples/: 01_pair_4ch_threading.rs  01_simple_std.rs  02_pair_8ch_threading.rs  02_periodic.rs  03_simple_fd.rs  04_custom_timing.rs  04_multi_std_asyncio.rs  05_pair_4ch_threading.rs  06_pair_8ch_threading.rs  07_pair_4ch_asyncio.rs  08_pair_8ch_asyncio.rs  09_multi_custom_timing_threading.rs  10_multi_custom_timing_asyncio.rs  11_long_run_stress.rs
sdk/gsusb-rs/examples/common/: mod.rs
sdk/gsusb-rs/scripts/: run_examples.ps1
sdk/gsusb-rs/src/: lib.rs
sdk/python-can-gsusb/: README.md  pyproject.toml
sdk/python-can-gsusb/examples/: 01_pair_4ch_threading.py  01_simple_std.py  02_pair_8ch_threading.py  02_periodic.py  03_simple_fd.py  04_custom_timing.py  04_multi_std_asyncio.py  05_pair_4ch_threading.py  06_pair_8ch_threading.py  07_pair_4ch_asyncio.py  08_pair_8ch_asyncio.py  09_multi_custom_timing_threading.py  10_multi_custom_timing_asyncio.py  11_long_run_stress.py  common.py
sdk/python-can-gsusb/src/gsusb/: __init__.py  bus.py
